--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 
   <main>
     <!-- Header -->
-    <section class="first-section section">
+    <section class="first-section">
       <div class="container">
         <h1 class="primary-header">Efektywne rozwiązania dla waszego biznesu</h1>
         <button type="button" class="service">Zamów usługę</button>
@@ -143,28 +143,28 @@
               <ul class="team-social-list">
                 <li class="team-social-item">
                   <a href="#" class="team-social-link">
-                    <svg width="44" height="44" class="team-social-icon">
+                    <svg width="20" height="20" class="team-social-icon">
                       <use href="./images/icons.svg#icon-instagram-2" width="20px" height="20px"></use>
                     </svg>
                   </a>
                 </li>
                 <li class="team-social-item">
                   <a href="#" class="team-social-link">
-                    <svg width="44" height="44" class="team-social-icon">
+                    <svg width="20" height="20" class="team-social-icon">
                       <use href="./images/icons.svg#icon-twitter-1" width="20px" height="20px"></use>
                     </svg>
                   </a>
                 </li>
                 <li class="team-social-item">
                   <a href="#" class="team-social-link">
-                    <svg width="44" height="44" class="team-social-icon">
+                    <svg width="20" height="20" class="team-social-icon">
                       <use href="./images/icons.svg#icon-facebook-1" width="20px" height="20px"></use>
                     </svg>
                   </a>
                 </li>
                 <li class="team-social-item">
                   <a href="#" class="team-social-link">
-                    <svg width="44" height="44" class="team-social-icon">
+                    <svg width="20" height="20" class="team-social-icon">
                       <use href="./images/icons.svg#icon-linkedin-1" width="20px" height="20px"></use>
                     </svg>
                   </a>
@@ -180,28 +180,28 @@
               <ul class="team-social-list">
                 <li class="team-social-item">
                   <a href="#" class="team-social-link">
-                    <svg width="44" height="44" class="team-social-icon">
+                    <svg width="20" height="20" class="team-social-icon">
                       <use href="./images/icons.svg#icon-instagram-2" width="20px" height="20px"></use>
                     </svg>
                   </a>
                 </li>
                 <li class="team-social-item">
                   <a href="#" class="team-social-link">
-                    <svg width="44" height="44" class="team-social-icon">
+                    <svg width="20" height="20" class="team-social-icon">
                       <use href="./images/icons.svg#icon-twitter-1" width="20px" height="20px"></use>
                     </svg>
                   </a>
                 </li>
                 <li class="team-social-item">
                   <a href="#" class="team-social-link">
-                    <svg width="44" height="44" class="team-social-icon">
+                    <svg width="20" height="20" class="team-social-icon">
                       <use href="./images/icons.svg#icon-facebook-1" width="20px" height="20px"></use>
                     </svg>
                   </a>
                 </li>
                 <li class="team-social-item">
                   <a href="#" class="team-social-link">
-                    <svg width="44" height="44" class="team-social-icon">
+                    <svg width="20" height="20" class="team-social-icon">
                       <use href="./images/icons.svg#icon-linkedin-1" width="20px" height="20px"></use>
                     </svg>
                   </a>
@@ -217,28 +217,28 @@
               <ul class="team-social-list">
                 <li class="team-social-item">
                   <a href="#" class="team-social-link">
-                    <svg width="44" height="44" class="team-social-icon">
+                    <svg width="20" height="20" class="team-social-icon">
                       <use href="./images/icons.svg#icon-instagram-2" width="20px" height="20px"></use>
                     </svg>
                   </a>
                 </li>
                 <li class="team-social-item">
                   <a href="#" class="team-social-link">
-                    <svg width="44" height="44" class="team-social-icon">
+                    <svg width="20" height="20" class="team-social-icon">
                       <use href="./images/icons.svg#icon-twitter-1" width="20px" height="20px"></use>
                     </svg>
                   </a>
                 </li>
                 <li class="team-social-item">
                   <a href="#" class="team-social-link">
-                    <svg width="44" height="44" class="team-social-icon">
+                    <svg width="20" height="20" class="team-social-icon">
                       <use href="./images/icons.svg#icon-facebook-1" width="20px" height="20px"></use>
                     </svg>
                   </a>
                 </li>
                 <li class="team-social-item">
                   <a href="#" class="team-social-link">
-                    <svg width="44" height="44" class="team-social-icon">
+                    <svg width="20" height="20" class="team-social-icon">
                       <use href="./images/icons.svg#icon-linkedin-1" width="20px" height="20px"></use>
                     </svg>
                   </a>
@@ -254,29 +254,29 @@
               <ul class="team-social-list">
                 <li class="team-social-item">
                   <a href="#" class="team-social-link">
-                    <svg width="44" height="44" class="team-social-icon">
-                      <use href="./images/icons.svg#icon-instagram-2" width="20px" height="20px"></use>
+                    <svg width="20" height="20" class="team-social-icon">
+                      <use href="./images/icons.svg#icon-instagram-2"></use>
                     </svg>
                   </a>
                 </li>
                 <li class="team-social-item">
                   <a href="#" class="team-social-link">
-                    <svg width="44" height="44" class="team-social-icon">
-                      <use href="./images/icons.svg#icon-twitter-1" width="20px" height="20px"></use>
+                    <svg width="20" height="20" class="team-social-icon">
+                      <use href="./images/icons.svg#icon-twitter-1"></use>
                     </svg>
                   </a>
                 </li>
                 <li class="team-social-item">
                   <a href="#" class="team-social-link">
-                    <svg width="44" height="44" class="team-social-icon">
-                      <use href="./images/icons.svg#icon-facebook-1" width="20px" height="20px"></use>
+                    <svg width="20" height="20" class="team-social-icon">
+                      <use href="./images/icons.svg#icon-facebook-1"></use>
                     </svg>
                   </a>
                 </li>
                 <li class="team-social-item">
                   <a href="#" class="team-social-link">
-                    <svg width="44" height="44" class="team-social-icon">
-                      <use href="./images/icons.svg#icon-linkedin-1" width="20px" height="20px"></use>
+                    <svg width="20" height="20" class="team-social-icon">
+                      <use href="./images/icons.svg#icon-linkedin-1"></use>
                     </svg>
                   </a>
                 </li>
@@ -291,32 +291,32 @@
         <h2 class="secondary-headers">Nasi klienci</h2>
         <ul class="flex">
           <li class="client-item">
-            <a href="#"><svg width="106" height="60" class="client-icon">
+            <a href="#" class="client-icon-link"><svg width="106" height="60" class="client-icon">
                 <use href="./images/icons.svg#icon-client-1"></use>
               </svg></a>
           </li>
           <li class="client-item">
-            <a href="#"><svg width="106" height="60" class="client-icon">
+            <a href="#" class="client-icon-link"><svg width="106" height="60" class="client-icon">
                 <use href="./images/icons.svg#icon-client-2"></use>
               </svg></a>
           </li>
           <li class="client-item">
-            <a href="#" class="clien-icon-link"><svg width="106" height="60" class="client-icon">
+            <a href="#" class="client-icon-link"><svg width="106" height="60" class="client-icon">
                 <use href="./images/icons.svg#icon-client-3"></use>
               </svg></a>
           </li>
           <li class="client-item">
-            <a href="#"><svg width="106" height="60" class="client-icon">
+            <a href="#" class="client-icon-link"><svg width="106" height="60" class="client-icon">
                 <use href="./images/icons.svg#icon-client-4"></use>
               </svg></a>
           </li>
           <li class="client-item">
-            <a href="#"><svg width="106" height="60" class="client-icon">
+            <a href="#" class="client-icon-link"><svg width="106" height="60" class="client-icon">
                 <use href="./images/icons.svg#icon-client-5"></use>
               </svg></a>
           </li>
           <li class="client-item">
-            <a href="#"><svg width="106" height="60" class="client-icon">
+            <a href="#" class="client-icon-link"><svg width="106" height="60" class="client-icon">
                 <use href="./images/icons.svg#icon-client-6"></use>
               </svg></a>
           </li>
@@ -328,9 +328,9 @@
   <footer class="footer">
     <!-- Footer -->
     <div class="container">
-      <a href="index.html" class="webstudio footer-logo"><span class="blue-studio">Web</span><span
-          class="white-studio">Studio</span></a>
       <div>
+        <a href="index.html" class="webstudio footer-logo"><span class="blue-studio">Web</span><span
+            class="white-studio">Studio</span></a>
         <address>
           <ul class="footer-list">
             <li class="footer-list-item">
@@ -349,24 +349,24 @@
       <div class="footer-button-section">
         <p>Dołącz do nas</p>
         <ul class="footer-button-list">
-          <li>
-            <a href="#"><svg height="44" width="44" class="footer-button">
-                <use href="./images/icons.svg#icon-instagram-2" width="20px" height="20px"></use>
+          <li class="footer-button-item">
+            <a href="#" class="footer-button-link"><svg height="20" width="20" class="footer-button">
+                <use href="./images/icons.svg#icon-instagram-2"></use>
               </svg></a>
           </li>
-          <li>
-            <a href="#"><svg height="44" width="44" class="footer-button">
-                <use href="./images/icons.svg#icon-twitter-1" width="20px" height="20px"></use>
+          <li class="footer-button-item">
+            <a href="#"><svg height="20" width="20" class="footer-button">
+                <use href="./images/icons.svg#icon-twitter-1"></use>
               </svg></a>
           </li>
-          <li>
-            <a href="#"><svg height="44" width="44" class="footer-button">
-                <use href="./images/icons.svg#icon-facebook-1" width="20px" height="20px"></use>
+          <li class="footer-button-item">
+            <a href="#"><svg height="20" width="20" class="footer-button">
+                <use href="./images/icons.svg#icon-facebook-1"></use>
               </svg></a>
           </li>
-          <li>
-            <a href="#"><svg height="44" width="44" class="footer-button">
-                <use href="./images/icons.svg#icon-linkedin-1" width="20px" height="20px"></use>
+          <li class="footer-button-item">
+            <a href="#"><svg height="20" width="20" class="footer-button">
+                <use href="./images/icons.svg#icon-linkedin-1"></use>
               </svg></a>
           </li>
         </ul>
