--- a/portfolio.html
+++ b/portfolio.html
@@ -138,22 +138,49 @@
   <footer class="footer">
     <!-- Footer -->
     <div class="container">
-      <a href="index.html" class="webstudio footer-logo"><span class="blue-studio">Web</span><span
-          class="white-studio">Studio</span></a>
-      <address>
-        <ul class="footer-list">
-          <li class="footer-list-item">
-            <a href="https://goo.gl/maps/FoN4GqAtt9caBdG7A" target="_blank" class="map-link footer-social-links">m.
-              Warszawa, Aleje Jerozolimskie 21</a>
+      <div>
+        <a href="index.html" class="webstudio footer-logo"><span class="blue-studio">Web</span><span
+            class="white-studio">Studio</span></a>
+        <address>
+          <ul class="footer-list">
+            <li class="footer-list-item">
+              <a href="https://goo.gl/maps/FoN4GqAtt9caBdG7A" target="_blank" class="map-link footer-social-links">m.
+                Warszawa, Aleje Jerozolimskie 21</a>
+            </li>
+            <li class="footer-list-item">
+              <a href="mailto:info@devstudio.com" class="gray-social-links footer-social-links">info@devstudio.com</a>
+            </li>
+            <li class="footer-list-item">
+              <a href="tel:+48111111111" class="gray-social-links footer-social-links">+48 111 111 111</a>
+            </li>
+          </ul>
+        </address>
+      </div>
+      <div class="footer-button-section">
+        <p>Dołącz do nas</p>
+        <ul class="footer-button-list">
+          <li class="footer-button-item">
+            <a href="#" class="footer-button-link"><svg height="20" width="20" class="footer-button">
+                <use href="./images/icons.svg#icon-instagram-2"></use>
+              </svg></a>
           </li>
-          <li class="footer-list-item">
-            <a href="mailto:info@devstudio.com" class="gray-social-links footer-social-links">info@devstudio.com</a>
+          <li class="footer-button-item">
+            <a href="#"><svg height="20" width="20" class="footer-button">
+                <use href="./images/icons.svg#icon-twitter-1"></use>
+              </svg></a>
           </li>
-          <li class="footer-list-item">
-            <a href="tel:+48111111111" class="gray-social-links footer-social-links">+48 111 111 111</a>
+          <li class="footer-button-item">
+            <a href="#"><svg height="20" width="20" class="footer-button">
+                <use href="./images/icons.svg#icon-facebook-1"></use>
+              </svg></a>
+          </li>
+          <li class="footer-button-item">
+            <a href="#"><svg height="20" width="20" class="footer-button">
+                <use href="./images/icons.svg#icon-linkedin-1"></use>
+              </svg></a>
           </li>
         </ul>
-      </address>
+      </div>
     </div>
     <!-- End footer -->
   </footer>
