Fixed social media icon colors and shadows on project cards in portfolio.html

--- a/index.html
+++ b/index.html
@@ -144,28 +144,28 @@
                 <li class="team-social-item">
                   <a href="#" class="team-social-link">
                     <svg width="20" height="20" class="team-social-icon">
-                      <use href="./images/icons.svg#icon-instagram-2" width="20px" height="20px"></use>
+                      <use href="./images/icons.svg#icon-instagram-2"></use>
                     </svg>
                   </a>
                 </li>
                 <li class="team-social-item">
                   <a href="#" class="team-social-link">
                     <svg width="20" height="20" class="team-social-icon">
-                      <use href="./images/icons.svg#icon-twitter-1" width="20px" height="20px"></use>
+                      <use href="./images/icons.svg#icon-twitter-1"></use>
                     </svg>
                   </a>
                 </li>
                 <li class="team-social-item">
                   <a href="#" class="team-social-link">
                     <svg width="20" height="20" class="team-social-icon">
-                      <use href="./images/icons.svg#icon-facebook-1" width="20px" height="20px"></use>
+                      <use href="./images/icons.svg#icon-facebook-1"></use>
                     </svg>
                   </a>
                 </li>
                 <li class="team-social-item">
                   <a href="#" class="team-social-link">
                     <svg width="20" height="20" class="team-social-icon">
-                      <use href="./images/icons.svg#icon-linkedin-1" width="20px" height="20px"></use>
+                      <use href="./images/icons.svg#icon-linkedin-1"></use>
                     </svg>
                   </a>
                 </li>
@@ -181,28 +181,28 @@
                 <li class="team-social-item">
                   <a href="#" class="team-social-link">
                     <svg width="20" height="20" class="team-social-icon">
-                      <use href="./images/icons.svg#icon-instagram-2" width="20px" height="20px"></use>
+                      <use href="./images/icons.svg#icon-instagram-2"></use>
                     </svg>
                   </a>
                 </li>
                 <li class="team-social-item">
                   <a href="#" class="team-social-link">
                     <svg width="20" height="20" class="team-social-icon">
-                      <use href="./images/icons.svg#icon-twitter-1" width="20px" height="20px"></use>
+                      <use href="./images/icons.svg#icon-twitter-1"></use>
                     </svg>
                   </a>
                 </li>
                 <li class="team-social-item">
                   <a href="#" class="team-social-link">
                     <svg width="20" height="20" class="team-social-icon">
-                      <use href="./images/icons.svg#icon-facebook-1" width="20px" height="20px"></use>
+                      <use href="./images/icons.svg#icon-facebook-1"></use>
                     </svg>
                   </a>
                 </li>
                 <li class="team-social-item">
                   <a href="#" class="team-social-link">
                     <svg width="20" height="20" class="team-social-icon">
-                      <use href="./images/icons.svg#icon-linkedin-1" width="20px" height="20px"></use>
+                      <use href="./images/icons.svg#icon-linkedin-1"></use>
                     </svg>
                   </a>
                 </li>
@@ -218,28 +218,28 @@
                 <li class="team-social-item">
                   <a href="#" class="team-social-link">
                     <svg width="20" height="20" class="team-social-icon">
-                      <use href="./images/icons.svg#icon-instagram-2" width="20px" height="20px"></use>
+                      <use href="./images/icons.svg#icon-instagram-2"></use>
                     </svg>
                   </a>
                 </li>
                 <li class="team-social-item">
                   <a href="#" class="team-social-link">
                     <svg width="20" height="20" class="team-social-icon">
-                      <use href="./images/icons.svg#icon-twitter-1" width="20px" height="20px"></use>
+                      <use href="./images/icons.svg#icon-twitter-1"></use>
                     </svg>
                   </a>
                 </li>
                 <li class="team-social-item">
                   <a href="#" class="team-social-link">
                     <svg width="20" height="20" class="team-social-icon">
-                      <use href="./images/icons.svg#icon-facebook-1" width="20px" height="20px"></use>
+                      <use href="./images/icons.svg#icon-facebook-1"></use>
                     </svg>
                   </a>
                 </li>
                 <li class="team-social-item">
                   <a href="#" class="team-social-link">
                     <svg width="20" height="20" class="team-social-icon">
-                      <use href="./images/icons.svg#icon-linkedin-1" width="20px" height="20px"></use>
+                      <use href="./images/icons.svg#icon-linkedin-1"></use>
                     </svg>
                   </a>
                 </li>
@@ -355,17 +355,17 @@
               </svg></a>
           </li>
           <li class="footer-button-item">
-            <a href="#"><svg height="20" width="20" class="footer-button">
+            <a href="#" class="footer-button-link"><svg height="20" width="20" class="footer-button">
                 <use href="./images/icons.svg#icon-twitter-1"></use>
               </svg></a>
           </li>
           <li class="footer-button-item">
-            <a href="#"><svg height="20" width="20" class="footer-button">
+            <a href="#" class="footer-button-link"><svg height="20" width="20" class="footer-button">
                 <use href="./images/icons.svg#icon-facebook-1"></use>
               </svg></a>
           </li>
           <li class="footer-button-item">
-            <a href="#"><svg height="20" width="20" class="footer-button">
+            <a href="#" class="footer-button-link"><svg height="20" width="20" class="footer-button">
                 <use href="./images/icons.svg#icon-linkedin-1"></use>
               </svg></a>
           </li>
