--- a/portfolio.html
+++ b/portfolio.html
@@ -66,69 +66,87 @@
         <!-- End button section -->
 
         <!-- Projects section -->
-        <ul class="flex-wrap">
+        <ul class="project-list">
           <li class="project-cards">
-            <img src="images/Technocrack.jpg" alt="Website" width="370" />
-            <div class="project-box">
-              <h3 class="project-names">Technocrack</h3>
-              <p class="project-categories">Strona internetowa</p>
-            </div>
+            <a href="#" class="project-link">
+              <img src="images/Technocrack.jpg" alt="Website" width="370" />
+              <div class="project-box">
+                <h3 class="project-names">Technocrack</h3>
+                <p class="project-categories">Strona internetowa</p>
+              </div>
+            </a>
           </li>
           <li class="project-cards">
-            <img src="./images/GrafikaNewOrleanVsGoldenStar.jpg" alt="Basketball players" width="370" />
-            <div class="project-box">
-              <h3 class="project-names">Grafika New Orlean vs Golden Star</h3>
-              <p class="project-categories">Design</p>
-            </div>
+            <a href="#" class="project-link">
+              <img src="./images/GrafikaNewOrleanVsGoldenStar.jpg" alt="Basketball players" width="370" />
+              <div class="project-box">
+                <h3 class="project-names">Grafika New Orlean vs Golden Star</h3>
+                <p class="project-categories">Design</p>
+              </div>
+            </a>
           </li>
           <li class="project-cards">
-            <img src="./images/RestauracjaSeafood.jpg" alt="Seafood restaurant logo" width="370" />
-            <div class="project-box">
-              <h3 class="project-names">Restauracja Seafood</h3>
-              <p class="project-categories">Aplikacja</p>
-            </div>
+            <a href="#" class="project-link">
+              <img src="./images/RestauracjaSeafood.jpg" alt="Seafood restaurant logo" width="370" />
+              <div class="project-box">
+                <h3 class="project-names">Restauracja Seafood</h3>
+                <p class="project-categories">Aplikacja</p>
+              </div>
+            </a>
           </li>
           <li class="project-cards">
-            <img src="./images/ProjektPrime.jpg" alt="Headphones" width="370" />
-            <div class="project-box">
-              <h3 class="project-names">Projekt Prime</h3>
-              <p class="project-categories">Marketing</p>
-            </div>
+            <a href="#" class="project-link">
+              <img src="./images/ProjektPrime.jpg" alt="Headphones" width="370" />
+              <div class="project-box">
+                <h3 class="project-names">Projekt Prime</h3>
+                <p class="project-categories">Marketing</p>
+              </div>
+            </a>
           </li>
           <li class="project-cards">
-            <img src="./images/ProjektBoxes.jpg" alt="Boxes" width="370" />
-            <div class="project-box">
-              <h3 class="project-names">Projekt Boxes</h3>
-              <p class="project-categories">Aplikacja</p>
-            </div>
+            <a href="#" class="project-link">
+              <img src="./images/ProjektBoxes.jpg" alt="Boxes" width="370" />
+              <div class="project-box">
+                <h3 class="project-names">Projekt Boxes</h3>
+                <p class="project-categories">Aplikacja</p>
+              </div>
+            </a>
           </li>
           <li class="project-cards">
-            <img src="./images/InspirationHasNoBorders.jpg" alt="Website" width="370" />
-            <div class="project-box">
-              <h3 class="project-names">Inspiration has no borders</h3>
-              <p class="project-categories">Strona internetowa</p>
-            </div>
+            <a href="#" class="project-link">
+              <img src="./images/InspirationHasNoBorders.jpg" alt="Website" width="370" />
+              <div class="project-box">
+                <h3 class="project-names">Inspiration has no borders</h3>
+                <p class="project-categories">Strona internetowa</p>
+              </div>
+            </a>
           </li>
           <li class="project-cards">
-            <img src="./images/MagazynLimitedEdition.jpg" alt="Design oriented magazine" width="370" />
-            <div class="project-box">
-              <h3 class="project-names">Magazyn Limited Edition</h3>
-              <p class="project-categories">Design</p>
-            </div>
+            <a href="#" class="project-link">
+              <img src="./images/MagazynLimitedEdition.jpg" alt="Design oriented magazine" width="370" />
+              <div class="project-box">
+                <h3 class="project-names">Magazyn Limited Edition</h3>
+                <p class="project-categories">Design</p>
+              </div>
+            </a>
           </li>
           <li class="project-cards">
-            <img src="./images/ProjektLAB.jpg" alt="Labels" width="370" />
-            <div class="project-box">
-              <h3 class="project-names">Projekt LAB</h3>
-              <p class="project-categories">Marketing</p>
-            </div>
+            <a href="#" class="project-link">
+              <img src="./images/ProjektLAB.jpg" alt="Labels" width="370" />
+              <div class="project-box">
+                <h3 class="project-names">Projekt LAB</h3>
+                <p class="project-categories">Marketing</p>
+              </div>
+            </a>
           </li>
           <li class="project-cards">
-            <img src="./images/GrowingBusiness.jpg" alt="Growing Business Website" width="370" />
-            <div class="project-box">
-              <h3 class="project-names">Growing Business</h3>
-              <p class="project-categories">Aplikacja</p>
-            </div>
+            <a href="#" class="project-link">
+              <img src="./images/GrowingBusiness.jpg" alt="Growing Business Website" width="370" />
+              <div class="project-box">
+                <h3 class="project-names">Growing Business</h3>
+                <p class="project-categories">Aplikacja</p>
+              </div>
+            </a>
           </li>
         </ul>
       </div>
@@ -165,17 +183,17 @@
               </svg></a>
           </li>
           <li class="footer-button-item">
-            <a href="#"><svg height="20" width="20" class="footer-button">
+            <a href="#" class="footer-button-link"><svg height="20" width="20" class="footer-button">
                 <use href="./images/icons.svg#icon-twitter-1"></use>
               </svg></a>
           </li>
           <li class="footer-button-item">
-            <a href="#"><svg height="20" width="20" class="footer-button">
+            <a href="#" class="footer-button-link"><svg height="20" width="20" class="footer-button">
                 <use href="./images/icons.svg#icon-facebook-1"></use>
               </svg></a>
           </li>
           <li class="footer-button-item">
-            <a href="#"><svg height="20" width="20" class="footer-button">
+            <a href="#" class="footer-button-link"><svg height="20" width="20" class="footer-button">
                 <use href="./images/icons.svg#icon-linkedin-1"></use>
               </svg></a>
           </li>
